<resources>
    <string name="app_name">Android_Project</string>
    <string name="Save_Button">Confirmer</string>
    <string name="hint_project_name">Nom du projet</string>
    <string name="description_project">Description du projet</string>
    <string name="submit">submit</string>
    <string name="title_activity_project_list">ProjectListActivity</string>
    <string name="etape_label">Etapes</string>
    <string name="total_label">Total</string>
    <string name="project_label">Projets</string>
    <string name="student_list_label">Liste des étudiants</string>
    <string name="add_student_button_label">Créer</string>
    <string-array name="points_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>